--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -19,6 +19,7 @@
             <a href="/team" class="nav-link {% if request.endpoint == 'team' %}active{% endif %}">团队</a>
             <a href="/about" class="nav-link {% if request.endpoint == 'about' %}active{% endif %}">理念与目标</a>
             <a href="/status" class="nav-link {% if request.endpoint == 'status' %}active{% endif %}">服务器状态</a>
+            <a href="/rules" class="nav-link {% if request.endpoint == 'rules' %}active{% endif %}">管理条例</a>
         </div>
     </nav>
 
