--- a/frontend/templates/404.html
+++ b/frontend/templates/404.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %}理念与目标 - Mid·Night{% endblock %}
+{% block title %}404 - Mid·Night{% endblock %}
 
 {% block content %}
 
